# CurrencyExchangeDRF

./: .env_example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
nginx/: Dockerfile  nginx.conf
nginx/frontend/js/: app.js
src/api/: admin.py  models.py  utils.py
src/api/converted_service/: serializers.py  service.py  views.py
src/api/currencies/: serializers.py  views.py
src/api/exchange_rates/: serializers.py  views.py
src/api/management/commands/: fill_db.py
src/api/migrations/: 0001_initial.py  0002_alter_exchangerate_rate_and_more.py
src/config/: settings.py  urls.py
src/tests/: settings.py  test_currencies.py  test_exchange_rates.py  test_exchange_service.py
src/tests/fixtures/: currencies.json  exchange_rates.json
